[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/environment.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/house/landing.gd" type="Script" id=2]
[ext_resource path="res://assets/bg/landing.png" type="Texture" id=3]
[ext_resource path="res://scenes/house/spawnPos.gd" type="Script" id=4]
[ext_resource path="res://scenes/interactable.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/ui/fade_screen.tscn" type="PackedScene" id=8]

[node name="landing" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="bg" parent="." index="0"]
texture = ExtResource( 3 )

[node name="collision" parent="." index="1"]
bordersizeL = 78
bordersizeR = 31

[node name="toiletDoor" parent="." index="2" instance=ExtResource( 7 )]
position = Vector2( 154, 150 )
audio = "doorSFX"

[node name="toiletPos" type="Position2D" parent="." index="3"]
position = Vector2( 154, 186 )

[node name="stairs" parent="." index="4" instance=ExtResource( 7 )]
position = Vector2( 84, 150 )

[node name="upstairsPos" type="Position2D" parent="." index="5"]
position = Vector2( 102, 186 )
script = ExtResource( 4 )
facing = 1

[node name="storeDoor" parent="." index="6" instance=ExtResource( 7 )]
position = Vector2( 264, 150 )
audio = "doorSFX"

[node name="storePos" type="Position2D" parent="." index="7"]
position = Vector2( 264, 186 )
scale = Vector2( 1, 1.02273 )

[node name="frontDoor" parent="." index="8" instance=ExtResource( 7 )]
position = Vector2( 380, 150 )
audio = "frontdoorSFX"

[node name="shopFrontPos" type="Position2D" parent="." index="9"]
position = Vector2( 360, 186 )
script = ExtResource( 4 )
facing = 0

[node name="ColorRect" parent="." index="10" instance=ExtResource( 8 )]
margin_top = -0.902496
margin_bottom = -0.902496
[connection signal="interacted" from="toiletDoor" to="." method="change_environment" binds= [ "toilet" ]]
[connection signal="interacted" from="stairs" to="." method="change_environment" binds= [ "upstairs" ]]
[connection signal="interacted" from="storeDoor" to="." method="change_environment" binds= [ "store" ]]
[connection signal="interacted" from="frontDoor" to="." method="change_environment" binds= [ "shopFront" ]]
